# MCP-Demo-implementation

./: .gitignore  README.md  backend.py  client.py  pyproject.toml  server.json  server.py
app/: main.py
client/: test_client.py
core/: context.py
db/: models.py  session.py
frontend/: index.html  package-lock.json  package.json  svelte.config.js  vite.config.js
frontend/src/: App.svelte
frontend/src/lib/: ChatPanel.svelte  Dashboard.svelte  Login.svelte  Register.svelte  auth.js
mcp_server/: server.py
prompts/: one_page_summary_prompt.txt  report_prompts.py
repositories/: base.py  company_repository.py  employee_repository.py  leave_request_repository.py  user_repository.py
resources/: company_docs.py
routers/: auth.py  chat.py  departments.py  deps.py  employees.py  leave.py
services/: agent.py  analytic_service.py  auth_service.py  credentials.py  department_service.py  employee_service.py  leave_service.py  report_service.py
static/: chat.js  index.html  style.css
tools/: analytic_tools.py  department_tools.py  employee_tools.py  leave_tools.py  report_tools.py
