[project]
name = "mcp-demo"
version = "0.1.0"
description = "sample demo mcp chat application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.4.2",
    "langchain-groq>=1.1.3",
    "mcp-use>=1.7.0",
    "mcp[cli]>=1.28.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.26.1",
    "reportlab>=5.0.0",
    "sqlalchemy>=2.0.51",
    "bcrypt>=5.0.0",
]
